objects/Bicycle__c.object
<CustomObject>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bicycles</relationshipLabel>
        <relationshipName>Bicycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Tandem</fullName>
                </value>
                <value>
                    <fullName>Unicycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sold_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sold out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testmodel__c</fullName>
        <label>testmodel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bicycle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bicycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bicycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>